examples/test/testpolicy14583.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14583
  namespace: namespace12
spec:
  podSelector:
    matchLabels:
      key32: value17
      key49: value11
      key7: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value4
      podSelector:
        matchLabels:
          key10: value38
          key40: value28
